--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,6 @@ body {
     margin: auto;
 }
 
-/* Input section */
 .input-section {
     margin-bottom: 10px;
 }
@@ -52,6 +51,22 @@ button {
 
 button:hover {
     background-color: #e98e2c;
+}
+
+/* Canvas container for the chart */
+.canvas-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-height: 70vh;
+    height: 70vh;
+}
+
+canvas {
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
+    width: auto;
 }
 
 /* GEX Levels Container */
@@ -97,5 +112,4 @@ button:hover {
         flex-direction: column;
     }
 }
-
 
